--- a/docker/prod/nginx/configs/python.conf
+++ b/docker/prod/nginx/configs/python.conf
@@ -1,6 +1,6 @@
 server {
     
-    server_name localhost;
+    server_name 99shops.de;
     
     location / {
         proxy_pass http://python:8000/;
