--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     ports:
       - "80:80"
     volumes:
+      - ./docker/prod/nginx/letsencrypt:/etc/letsencrypt
       - ./docker/prod/nginx/configs:/etc/nginx/conf.d
       - /statics/wagtail-agency-personal/static_files:/statics/wagtail-agency-personal/static_files/
       - /statics/wagtail-agency-personal/media_files:/statics/wagtail-agency-personal/media_files/
