--- a/docker/prod/nginx/configs/python.conf
+++ b/docker/prod/nginx/configs/python.conf
@@ -20,4 +20,25 @@ server {
         alias /statics/wagtail-agency-personal/media_files/;
     }
 
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/99shops.de/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/99shops.de/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = 99shops.de) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    
+    server_name 99shops.de;
+    listen 80;
+    return 404; # managed by Certbot
+
+
 }
