Updated nginx config with .at domain

--- a/docker/prod/nginx/configs/python.conf
+++ b/docker/prod/nginx/configs/python.conf
@@ -1,6 +1,6 @@
 server {
     
-    server_name 99shops.de;
+    server_name 99shops.de 99shops.at;
     
     location / {
         proxy_pass http://python:8000/;
@@ -23,10 +23,13 @@ server {
 
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/99shops.de/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/99shops.de/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/99shops.at/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/99shops.at/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+
+
 
 }
 server {
